(rule
 (action
  (copy ../../src_lockfree/mpsc_queue.ml mpsc_queue.ml))
 (package saturn_lockfree))

(test
 (package saturn_lockfree)
 (name mpsc_queue_dscheck)
 (libraries atomic dscheck alcotest multicore-magic backoff)
 (modules mpsc_queue mpsc_queue_dscheck))

(test
 (package saturn_lockfree)
 (name qcheck_mpsc_queue)
 (libraries
  saturn_lockfree
  barrier
  qcheck
  qcheck-core
  qcheck-alcotest
  alcotest
  multicore-magic
  backoff)
 (modules qcheck_mpsc_queue))

(test
 (package saturn_lockfree)
 (name stm_mpsc_queue)
 (modules stm_mpsc_queue)
 (libraries
  saturn_lockfree
  qcheck-core
  qcheck-core.runner
  qcheck-multicoretests-util
  qcheck-stm.stm
  qcheck-stm.sequential
  qcheck-stm.domain
  multicore-magic
  backoff)
 (enabled_if
  (= %{arch_sixtyfour} true))
 (action
  (run %{test} --verbose)))
